--- a/data/index.html
+++ b/data/index.html
@@ -5,6 +5,7 @@
   <title>Xmas Lights</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="data:,">
+  <script src="https://www.w3schools.com/lib/w3color.js"></script>
   <style>
     html {
       font-family: Arial;
